--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>DK's Blog</h1>
-<p>GitHub Page test</p>
-</body>
-</html>
+---
+# Feel free to add content and custom Front Matter to this file.
+# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+
+layout: home
+title: Home
+banner: "/assets/images/banners/home.jpeg"
+---
